--- a/src/app/Shared/shared/header/navigation.component.html
+++ b/src/app/Shared/shared/header/navigation.component.html
@@ -4,7 +4,7 @@
   <!-- Notification icon (Only shown when logged in) -->
   <!-- ============================================================== -->
   <li class="nav-item" *ngIf="isLoggedIn">
-    <a class="nav-link waves-effect waves-dark" href="javascript:void(0)">
+    <a class="nav-link waves-effect waves-dark" [routerLink]="'/notifications'">
       <i class="bi bi-bell fs-4"></i> <!-- Notification bell icon -->
     </a>
   </li>
