--- a/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.css
+++ b/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.css
@@ -143,3 +143,19 @@ input:focus {
     outline: none;
     box-shadow: 0px 0px 10px rgba(142, 32, 33, 0.3);
 }
+.alert {
+    font-size: 1.2rem;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .alert-success {
+    background-color: #d4edda;
+    color: #155724;
+  }
+  
+  .alert .close {
+    font-size: 1.5rem;
+  }
+  
