--- a/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.html
+++ b/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.html
@@ -29,9 +29,10 @@
             <div class="form-group">
                 <label for="tripType" class="form-label">Trip Type</label>
                 <select class="form-control form-control-lg" id="tripType" [(ngModel)]="trip.tripType" name="tripType" required>
-                    <option value="express">Express Trip</option>
-                    <option value="longDistance">Long Distance Travel</option>
-                </select>
+                    <option value="EXPRESS_TRIP">Express Trip</option>
+                    <option value="LONG_DISTANCE_TRAVEL">Long Distance Travel</option>
+                  </select>
+                  
             </div>
         </div>
         <div class="col-md-5">
@@ -52,17 +53,22 @@
     </div>
 
     <!-- Select Driver -->
-    <div class="row justify-content-center mt-4">
-        <div class="col-md-5">
-            <div class="form-group">
-                <label for="driverSelect" class="form-label">Select Driver</label>
-                <select id="driverSelect" class="form-control form-control-lg" [(ngModel)]="trip.driverId" name="driverId" required>
-                    <option *ngFor="let driver of availableDrivers" [value]="driver.driverId">{{driver.firstName}} {{driver.lastName}}</option>
-                </select>
-                <small class="form-text text-muted">Select an available driver</small>
-            </div>
+    <!-- Select Driver -->
+<div class="row justify-content-center mt-4">
+    <div class="col-md-5">
+        <div class="form-group">
+            <label for="driverSelect" class="form-label">Select Driver</label>
+            <select id="driverSelect" class="form-control form-control-lg" [(ngModel)]="trip.driverId" name="driverId" required>
+                <option *ngFor="let driver of availableDrivers" [value]="driver.userId">
+                  {{ driver.firstName }} {{ driver.lastName }}
+                </option>
+              </select>
+              
+            <small class="form-text text-muted">Select an available driver</small>
         </div>
     </div>
+</div>
+
 
     <!-- Submit Button -->
     <div class="row justify-content-center mt-4">
@@ -72,4 +78,14 @@
             </button>
         </div>
     </div>
+    <!-- Success Message -->
+<!-- Success Message -->
+<div *ngIf="successMessage" class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+    <strong>Success!</strong> {{ successMessage }} <!-- Make sure the successMessage is interpolated here -->
+    <button type="button" class="close" (click)="successMessage = ''" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+  
 </div>
