--- a/src/app/Shared/layouts/full/full.component.html
+++ b/src/app/Shared/layouts/full/full.component.html
@@ -15,59 +15,54 @@
   <!-- ============================================================== -->
   <!-- Topbar header - style you can find in topbar.scss -->
   <!-- ============================================================== -->
-  <header class="topbar" data-navbarbg="skin5">
-  <nav class="d-flex top-navbar navbar-expand-lg navbar-dark">
-    <div class="navbar-header" [ngClass]="expandLogo ? 'expand-logo' : ''" data-logobg="skin6">
-      <!-- This is for the sidebar toggle which is visible on mobile only -->
-      <a (click)="showMobileMenu = !showMobileMenu"
-         class="nav-toggler waves-effect waves-light d-block d-lg-none"
-         href="javascript:void(0)">
-        <i [ngClass]="showMobileMenu ? 'bi bi-text-left fs-6' : 'bi bi-text-left fs-6'"></i>
-      </a>
+  <header *ngIf="!hideSidebarAndHeader" class="topbar" data-navbarbg="skin5">
+    <nav class="d-flex top-navbar navbar-expand-lg navbar-dark">
+      <div class="navbar-header" [ngClass]="expandLogo ? 'expand-logo' : ''" data-logobg="skin6">
+        <!-- This is for the sidebar toggle which is visible on mobile only -->
+        <a (click)="showMobileMenu = !showMobileMenu"
+           class="nav-toggler waves-effect waves-light d-block d-lg-none"
+           href="javascript:void(0)">
+          <i [ngClass]="showMobileMenu ? 'bi bi-text-left fs-6' : 'bi bi-text-left fs-6'"></i>
+        </a>
+        
+        <!-- Logo -->
+        <a class="navbar-brand" href="/">
+          <b class="logo-icon" style="width : 1200px">
+            <img src="assets/FrontOffice/images/logos/SpeedyGo (10).png" alt="homepage" style="width : 1200px" class="dark-logo" />
+          </b>
+        </a>
+        
+        <!-- Mobile toggle -->
+        <a class="topbartoggler d-block d-lg-none waves-effect waves-light"
+           href="javascript:void(0)"
+           data-toggle="collapse"
+           data-target="#navbarSupportedContent"
+           aria-controls="navbarSupportedContent"
+           aria-expanded="false"
+           aria-label="Toggle navigation"
+           (click)="isCollapsed = !isCollapsed"
+           [attr.aria-expanded]="!isCollapsed">
+          <i class="bi bi-text-right fs-6"></i>
+        </a>
+      </div>
       
-      <!-- Logo -->
-      <a class="navbar-brand"   href="/">
-        <!-- Logo icon -->
-        <b class="logo-icon" style="width : 1200px">
-          <img src="assets/FrontOffice/images/logos/SpeedyGo (10).png" alt="homepage"  style="width : 1200px" class="dark-logo" />
-        </b>
-      </a>
-      
-      <!-- Mobile toggle -->
-      <a class="topbartoggler d-block d-lg-none waves-effect waves-light"
-         href="javascript:void(0)"
-         data-toggle="collapse"
-         data-target="#navbarSupportedContent"
-         aria-controls="navbarSupportedContent"
-         aria-expanded="false"
-         aria-label="Toggle navigation"
-         (click)="isCollapsed = !isCollapsed"
-         [attr.aria-expanded]="!isCollapsed">
-        <i class="bi bi-text-right fs-6"></i>
-      </a>
-    </div>
-    
-    <!-- Navbar links collapse -->
-    <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5" [ngbCollapse]="!isCollapsed">
-      <app-navigation (toggleSidebar)="toggleSidebarType()" class="w-100"></app-navigation>
-    </div>
-  </nav>
-</header>
+      <!-- Navbar links collapse -->
+      <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5" [ngbCollapse]="!isCollapsed">
+        <app-navigation (toggleSidebar)="toggleSidebarType()" class="w-100"></app-navigation>
+      </div>
+    </nav>
+  </header>
 
   <!-- ============================================================== -->
   <!-- Left Sidebar - style you can find in sidebar.scss  -->
   <!-- ============================================================== -->
-  <aside
-    class="left-sidebar"
-    data-sidebarbg="skin6"
-    (mouseover)="Logo()"
-    (mouseout)="Logo()"
-  >
-      <app-sidebar></app-sidebar>
+  <aside *ngIf="!hideSidebarAndHeader" class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
+    <app-sidebar></app-sidebar>
   </aside>
   <!-- ============================================================== -->
   <!-- End Left Sidebar - style you can find in sidebar.scss  -->
   <!-- ============================================================== -->
+
   <!-- ============================================================== -->
   <!-- Page wrapper  -->
   <!-- ============================================================== -->
@@ -75,7 +70,7 @@
     <!-- ============================================================== -->
     <!-- Container fluid  -->
     <!-- ============================================================== -->
-    <div class="container-fluid" >
+    <div class="container-fluid">
       <!-- ============================================================== -->
       <!-- Start Page Content -->
       <!-- ============================================================== -->
@@ -87,18 +82,5 @@
     <!-- ============================================================== -->
     <!-- End Container fluid  -->
     <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- footer -->
-    <!-- ============================================================== -->
-    <footer class="footer text-center">
-      All Rights Reserved by Elite Admin. Designed and Developed by
-      <a href="https://www.wrappixel.com">WrapPixel</a>.
-    </footer>
-    <!-- ============================================================== -->
-    <!-- End footer -->
-    <!-- ============================================================== -->
   </div>
-  <!-- ============================================================== -->
-  <!-- End Page wrapper  -->
-  <!-- ============================================================== -->
 </div>
