Parcel Creation +LogOut +Role Management updatess

--- a/src/app/Components/FrontOffice/parcel/parcel-create/parcel-create.component.html
+++ b/src/app/Components/FrontOffice/parcel/parcel-create/parcel-create.component.html
@@ -47,7 +47,7 @@
     <div class="row justify-content-center mt-4">
         <div class="col-md-5">
             <div class="form-group">
-                <label for="recepeientPhoneNumber" class="form-label text-muted">Recipient's Phone Number</label>
+                <label for="recepeientPhoneNumber" class="form-label text-muted">Recipient's Phone Number </label>
                 <input type="number" class="form-control form-control-lg rounded-pill shadow-sm border-0" id="recepeientPhoneNumber" [(ngModel)]="parcel.recepeientPhoneNumber" name="recepeientPhoneNumber" placeholder="Enter recipient's phone number" required>
             </div>
         </div>
@@ -78,7 +78,7 @@
     <div class="row justify-content-center mt-4">
         <div class="col-md-5">
             <button class="btn btn-lg btn-primary w-100 rounded-pill shadow-sm border-0" type="button" (click)="createParcel()">
-                <i class="fas fa-paper-plane"></i> Create Parcel
+                <i class="fas fa-paper-plane"></i> Send Parcel
             </button>
         </div>
     </div>
