--- a/src/app/Shared/shared/header/navigation.component.html
+++ b/src/app/Shared/shared/header/navigation.component.html
@@ -30,7 +30,7 @@
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" [routerLink]="'/profile'">My Profile</a> <!-- Added routerLink for profile -->
-      <a class="dropdown-item" href="javascript:void(0)">My Balance</a>
+      <a class="dropdown-item" [routerLink]="'/chat'">Chat</a>
       <a class="dropdown-item" href="javascript:void(0)">Inbox</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Logout</a>
