--- a/src/app/Components/DriverInterface/login/login.component.html
+++ b/src/app/Components/DriverInterface/login/login.component.html
@@ -6,8 +6,8 @@
         <label for="email">Email</label>
         <input id="email" formControlName="email" type="email" placeholder="Enter your email">
         <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
-          <small *ngIf="loginForm.get('email')?.errors?.required">Email is required</small>
-          <small *ngIf="loginForm.get('email')?.errors?.email">Please enter a valid email</small>
+          <small *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</small>
+          <small *ngIf="loginForm.get('email')?.errors?.['email']">Please enter a valid email</small>
         </div>
       </div>
   
@@ -16,8 +16,8 @@
         <label for="password">Password</label>
         <input id="password" formControlName="password" type="password" placeholder="Enter your password">
         <div *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
-          <small *ngIf="loginForm.get('password')?.errors?.required">Password is required</small>
-          <small *ngIf="loginForm.get('password')?.errors?.minlength">Password must be at least 6 characters</small>
+          <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</small>
+          <small *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters</small>
         </div>
       </div>
   
