--- a/src/app/Components/DriverInterface/trip/trip-list/trip-list.component.html
+++ b/src/app/Components/DriverInterface/trip/trip-list/trip-list.component.html
@@ -1,1 +1,35 @@
-<p>trip-list works!</p>
+<div *ngIf="trips && trips.length > 0; else noTrips" class="trip-list-container">
+    <h2>Your Trips</h2>
+    <table class="trip-table">
+      <thead>
+        <tr>
+          <th>Departure</th>
+          <th>Destination</th>
+          <th>Date</th>
+          <th>Duration</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let trip of trips">
+          <td>{{ trip.tripDeparture }}</td>
+          <td>{{ trip.tripDestination }}</td>
+          <td>{{ trip.tripDate | date: 'short' }}</td>
+          <td>{{ trip.tripDuration || 'N/A' }} hrs</td>
+          <td>{{ trip.tripPrice || 'N/A' | currency }}</td>
+          <td>{{ trip.reservationStatus }}</td>
+          <td class="action-buttons">
+            <button class="accept-btn" (click)="acceptTrip(trip)">Accept</button>
+            <button class="refuse-btn" (click)="refuseTrip(trip)">Refuse</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
+  <ng-template #noTrips>
+    <p class="no-trips-message">You have no trips scheduled.</p>
+  </ng-template>
+  
