--- a/src/app/Components/FrontOffice/chat/chat/chat.component.html
+++ b/src/app/Components/FrontOffice/chat/chat/chat.component.html
@@ -115,7 +115,7 @@
             border: none;
             cursor: pointer;
             font-size: 18px;
-            color: #ff4d4d;
+            color: #f9f5f5;
         }
 
         /* Barre de saisie */
