--- a/src/app/Shared/shared/header/navigation.component.html
+++ b/src/app/Shared/shared/header/navigation.component.html
@@ -31,7 +31,7 @@
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" [routerLink]="'/profile'">My Profile</a> <!-- Added routerLink for profile -->
       <a class="dropdown-item" [routerLink]="'/chat'">Chat</a>
-      <a class="dropdown-item" href="javascript:void(0)">Inbox</a>
+      <a class="dropdown-item" href="javascript:void(0)">History</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Logout</a>
     </div>
