--- a/src/app/Components/BackOffice/subscription/subscription-details/subscription-details.component.html
+++ b/src/app/Components/BackOffice/subscription/subscription-details/subscription-details.component.html
@@ -62,7 +62,7 @@
                 <button (click)="editSubscription(sub)" class="btn btn-warning btn-sm mr-2">
                   <i class="fas fa-edit"></i> Edit
                 </button>
-                <button (click)="deleteSubscription(sub.id)" class="btn btn-danger btn-sm">
+                <button (click)="deleteSubscription(sub.subscriptionId)" class="btn btn-danger btn-sm">
                   <i class="fas fa-trash"></i> Delete
                 </button>
               </div>
