--- a/src/app/Components/FrontOffice/signup/signup.component.html
+++ b/src/app/Components/FrontOffice/signup/signup.component.html
@@ -26,11 +26,6 @@
       overflow: hidden;
     }
 
-    /* Remove all inherited styles from global CSS like header or sidebar */
-    header, footer, nav, aside {
-      display: none;
-    }
-
     /* Container for the sign up form */
     .signup-container {
       max-width: 450px;
@@ -168,7 +163,8 @@
         <label for="firstName">First Name</label>
         <input id="firstName" formControlName="firstName" type="text" placeholder="Enter your first name" class="input-field">
         <div *ngIf="signupForm.get('firstName')?.touched && signupForm.get('firstName')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('firstName')?.errors?.required">First Name is required</small>
+          <small *ngIf="signupForm.get('firstName')?.errors?.['required']">First Name is required</small>
+          <small *ngIf="signupForm.get('firstName')?.errors?.['minlength']">First Name must be at least 2 characters</small>
         </div>
       </div>
 
@@ -177,7 +173,8 @@
         <label for="lastName">Last Name</label>
         <input id="lastName" formControlName="lastName" type="text" placeholder="Enter your last name" class="input-field">
         <div *ngIf="signupForm.get('lastName')?.touched && signupForm.get('lastName')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('lastName')?.errors?.required">Last Name is required</small>
+          <small *ngIf="signupForm.get('lastName')?.errors?.['required']">Last Name is required</small>
+          <small *ngIf="signupForm.get('lastName')?.errors?.['minlength']">Last Name must be at least 2 characters</small>
         </div>
       </div>
 
@@ -186,8 +183,8 @@
         <label for="email">Email</label>
         <input id="email" formControlName="email" type="email" placeholder="Enter your email" class="input-field">
         <div *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('email')?.errors?.required">Email is required</small>
-          <small *ngIf="signupForm.get('email')?.errors?.email">Please enter a valid email</small>
+          <small *ngIf="signupForm.get('email')?.errors?.['required']">Email is required</small>
+          <small *ngIf="signupForm.get('email')?.errors?.['email']">Please enter a valid email</small>
         </div>
       </div>
 
@@ -196,8 +193,8 @@
         <label for="password">Password</label>
         <input id="password" formControlName="password" type="password" placeholder="Enter your password" class="input-field">
         <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('password')?.errors?.required">Password is required</small>
-          <small *ngIf="signupForm.get('password')?.errors?.minlength">Password must be at least 6 characters</small>
+          <small *ngIf="signupForm.get('password')?.errors?.['required']">Password is required</small>
+          <small *ngIf="signupForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters</small>
         </div>
       </div>
 
@@ -206,7 +203,7 @@
         <label for="address">Address</label>
         <input id="address" formControlName="address" type="text" placeholder="Enter your address" class="input-field">
         <div *ngIf="signupForm.get('address')?.touched && signupForm.get('address')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('address')?.errors?.required">Address is required</small>
+          <small *ngIf="signupForm.get('address')?.errors?.['required']">Address is required</small>
         </div>
       </div>
 
@@ -215,8 +212,8 @@
         <label for="cin">CIN</label>
         <input id="cin" formControlName="cin" type="text" placeholder="Enter your CIN" class="input-field">
         <div *ngIf="signupForm.get('cin')?.touched && signupForm.get('cin')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('cin')?.errors?.required">CIN is required</small>
-          <small *ngIf="signupForm.get('cin')?.errors?.pattern">CIN must be numeric</small>
+          <small *ngIf="signupForm.get('cin')?.errors?.['required']">CIN is required</small>
+          <small *ngIf="signupForm.get('cin')?.errors?.['pattern']">CIN must be numeric</small>
         </div>
       </div>
 
@@ -225,7 +222,7 @@
         <label for="birthDate">Birth Date</label>
         <input id="birthDate" formControlName="birthDate" type="date" class="input-field">
         <div *ngIf="signupForm.get('birthDate')?.touched && signupForm.get('birthDate')?.invalid" class="error-message">
-          <small *ngIf="signupForm.get('birthDate')?.errors?.required">Birth Date is required</small>
+          <small *ngIf="signupForm.get('birthDate')?.errors?.['required']">Birth Date is required</small>
         </div>
       </div>
 
